Style changes to the footer. Navigation now directs to the correct anchors for the About sub-menus'. added smooth scrolling to the layout styles. Added the environmental policy section to the about page.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -51,7 +51,7 @@
       </div>
     </div>
   </fragment>
-  <div class="bg-zinc-900 flex justify-between text-stone-600 px-2 text-sm">
+  <div class="bg-zinc-900 flex justify-between text-zinc-500 px-2 text-sm">
     <p>Made by Sanjeet</p>
     <p>
       Developed with
