--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -26,8 +26,8 @@ const { orientation } = Astro.props;
       text={"About"}
       subTexts={[
         { text: "About Us", path: "/about" },
-        { text: "Our Services", path: "#" },
-        { text: "Environmental Policy", path: "#" },
+        { text: "Our Services", path: "/about.html#services" },
+        { text: "Environmental Policy", path: "/about.html#environment" },
       ]}
       orientation={orientation}
     />
