--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,12 +6,17 @@ import { Image } from "astro:assets";
 
 <Layout title="SGL Trucking LTD. - About Us">
   <!-- Filler content for the sapce  behind the header -->
-  <div class="pt-[12vh] w-full bg-gradient-to-r from-blue-500 to-[#7badff]">
-  </div>
+  <!-- <div class="pt-[12vh] w-full bg-gradient-to-r from-blue-500 to-[#7badff]">
+  </div> -->
   <div
-    class="h-[65vh] flex justify-center items-center relative bg-sky-400"
+    class="h-[75vh] w-full flex justify-center items-center relative bg-sky-400"
     id="hero"
   >
+    <Image
+      class="absolute h-full m-auto object-bottom object-cover"
+      src={truckPic}
+      alt="Scenic image of a truck driving up a road."
+    />
     <div
       class="z-10 w-full text-center drop-shadow-[-10_1.2px_1.2px_rgba(255,255,255,0.8)] text-slate-100"
     >
@@ -20,11 +25,6 @@ import { Image } from "astro:assets";
         Who we are, our mission, and how we do it.
       </p>
     </div>
-    <Image
-      class="absolute top-0 h-full object-cover"
-      src={truckPic}
-      alt="Scenic image of a truck driving up a road."
-    />
   </div>
   <main class="h-auto text-stone-700 text-center">
     <div class="bg-white w-full flex justify-center">
