added drop shadows to the hero fonts, made a contact page, added the correct paths to the navigation component

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -36,8 +36,8 @@ const { orientation } = Astro.props;
       client:load
       text={"Contact"}
       subTexts={[
-        { text: "Contact Us", path: "#" },
-        { text: "Careers", path: "#" },
+        { text: "Contact Us", path: "/contact" },
+        { text: "Careers", path: "/contact" },
       ]}
       orientation={orientation}
     />
