--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,6 +19,7 @@ import { Image } from "astro:assets";
     />
     <div
       class="z-10 w-full text-center drop-shadow-[-10_1.2px_1.2px_rgba(255,255,255,0.8)] text-slate-100"
+      id="hero-title"
     >
       <h1 class="text-4xl sm:text-6xl mb-2 z-10">About Us</h1>
       <p class="text-base md:text-2xl">
@@ -193,3 +194,9 @@ import { Image } from "astro:assets";
     </div>
   </main>
 </Layout>
+
+<style>
+  #hero-title {
+    text-shadow: black 2px 2px 4px;
+  }
+</style>
