progress on the contact page

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -37,7 +37,7 @@ const { orientation } = Astro.props;
       text={"Contact"}
       subTexts={[
         { text: "Contact Us", path: "/contact" },
-        { text: "Careers", path: "/contact" },
+        { text: "Careers", path: "/contact.html#careers" },
       ]}
       orientation={orientation}
     />
