--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,58 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
+import truckPic from "../assets/truck-bw.avif";
 ---
 
-<Layout title="SGL Trucking LTD. - Contact Us"> stuff </Layout>
+<Layout title="SGL Trucking LTD. - Contact Us">
+  <div
+    class="h-[75vh] w-full flex justify-center items-center relative bg-zinc-600"
+    id="hero"
+  >
+    <Image
+      class="absolute h-full m-auto object-bottom object-cover"
+      src={truckPic}
+      alt="A black and white image of a truck driving on a road."
+    />
+    <div
+      class="z-10 w-full text-center drop-shadow-[-10_1.2px_1.2px_rgba(255,255,255,0.8)] text-slate-100"
+      id="hero-title"
+    >
+      <h1 class="text-4xl sm:text-6xl mb-2 z-10">Contact Us</h1>
+      <p class="text-base md:text-2xl">Get in touch</p>
+    </div>
+  </div>
+  <main class="h-auto text-stone-700 text-center">
+    <div class="bg-white w-full flex justify-center">
+      <div class="w-full py-12 max-w-[800px]">
+        <div class="m-auto p-4">
+          <h2 class="text-stone-800 text-4xl pb-6">Meet SGL Trucking Ltd.</h2>
+          <h3 class="text-2xl font-semibold">Address:</h3>
+          <p>Unit - 202, 11957 80 Ave,</p>
+          <p>Delta, BC V4C 0E2</p>
+          <h2 class="text-stone-800 text-4xl pb-6">Contact Information</h2>
+          <h3 class="text-2xl font-semibold">Phone Number:</h3>
+          <p>
+            <a href="tel:+1-604-572-1224"> +1-604-572-1224 </a>
+          </p>
+          <h3 class="text-2xl font-semibold">Email:</h3>
+          <p>
+            <a href="mailto:info@sgltrucking.com">info@sgltrucking.com</a>
+          </p>
+        </div>
+        <div class="m-auto p-4 relative">
+          <div class="h-4 absolute -top-14" id="careers"></div>
+          <h2 class="text-stone-800 text-4xl pb-6">Join our team!</h2>
+          <p>Are you a Long Haul Truck Driver and looking to join our team?</p>
+          <p>Click here for the driver admission form.</p>
+        </div>
+      </div>
+    </div>
+  </main>
+</Layout>
+
+<style>
+  #hero-title {
+    text-shadow: black 2px 2px 4px;
+  }
+</style>
