added some slight content fixes, the buttons link to their appropriate pages, not all but most. Added a bunch of contact info, added svgs to create a social media menu.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -156,19 +156,15 @@ import { Image } from "astro:assets";
                     footprint.
                   </li>
                   <li>
-                    Fleet is maximally maintained to ensure efficient operation.
-                  </li>
-                  <li>
-                    Training of team members so that they may actively
-                    participate in and employ our environmental policies.
-                  </li>
-                  <li>
-                    Training of team members so that they may actively
-                    participate in and employ our environmental policies.
+                    Fleet is always maintained to ensure efficient operation.
                   </li>
                   <li>
                     Adoption of new technology and innovative practices which
                     limit waste and resource usage.
+                  </li>
+                  <li>
+                    Training of team members so that they may actively
+                    participate in and employ our environmental policies.
                   </li>
                 </div>
               </ul>
