--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,28 +23,41 @@ import truckPic from "../assets/truck-bw.avif";
     </div>
   </div>
   <main class="h-auto text-stone-700 text-center">
-    <div class="bg-white w-full flex justify-center">
+    <div class="bg-stone-100 w-full flex justify-center">
       <div class="w-full py-12 max-w-[800px]">
         <div class="m-auto p-4">
           <h2 class="text-stone-800 text-4xl pb-6">Meet SGL Trucking Ltd.</h2>
-          <h3 class="text-2xl font-semibold">Address:</h3>
-          <p>Unit - 202, 11957 80 Ave,</p>
-          <p>Delta, BC V4C 0E2</p>
-          <h2 class="text-stone-800 text-4xl pb-6">Contact Information</h2>
-          <h3 class="text-2xl font-semibold">Phone Number:</h3>
-          <p>
-            <a href="tel:+1-604-572-1224"> +1-604-572-1224 </a>
-          </p>
-          <h3 class="text-2xl font-semibold">Email:</h3>
-          <p>
-            <a href="mailto:info@sgltrucking.com">info@sgltrucking.com</a>
-          </p>
+          <h3 class="text-2xl font-semibold">Office Address:</h3>
+          <div class="py-2">
+            <p>Unit - 202, 11957 80 Ave,</p>
+            <p>Delta, BC V4C 0E2</p>
+          </div>
+          <h2 class="text-stone-800 text-4xl py-6">Contact Information</h2>
+          <div class="py-2 flex justify-evenly flex-col sm:flex-row">
+            <div class="pb-2">
+              <h3 class="text-xl font-semibold">Office Phone:</h3>
+              <p>
+                <a href="tel:+1-604-572-1224"> +1-604-572-1224 </a>
+              </p>
+            </div>
+            <div>
+              <h3 class="text-xl font-semibold">Email:</h3>
+              <p>
+                <a href="mailto:info@sgltrucking.com">info@sgltrucking.com</a>
+              </p>
+            </div>
+          </div>
         </div>
         <div class="m-auto p-4 relative">
           <div class="h-4 absolute -top-14" id="careers"></div>
           <h2 class="text-stone-800 text-4xl pb-6">Join our team!</h2>
           <p>Are you a Long Haul Truck Driver and looking to join our team?</p>
-          <p>Click here for the driver admission form.</p>
+
+          <button
+            class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500 mt-8"
+          >
+            <a href="#">Driver Application</a>
+          </button>
         </div>
       </div>
     </div>
