more minor changes like adding <sup> tags for cool af addresses, changed the way some buttons work on mobile menu so they refrence the button + id.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,8 +13,8 @@
         >
           <h5 class="pb-3 font-normal">Head Office</h5>
           <span class="text-sm text-slate-200">
-            <p class="pb-2">Unit - 202, 11957 80th Ave</p>
-            <p class="pb-2">Delta, BC V4C 0E2</p>
+            <p class="pb-2">Unit - 202, 11957 80<sup>th</sup> Ave</p>
+            <p class="pb-2">Delta, BC, V4C 0E2</p>
           </span>
         </div>
 
