--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,8 +49,15 @@ let isMobileView = false;
   </body>
 </html>
 
-<style>
+<style is:global>
   html {
     scroll-behavior: smooth;
+  }
+  main {
+    font-size: 20px;
+    line-height: 1.6;
+  }
+  #hero-title {
+    text-shadow: black 2px 2px 4px;
   }
 </style>
