--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -129,10 +129,10 @@ import { Image } from "astro:assets";
           <h2 class="text-stone-800 text-4xl pb-6">Environmental Policy</h2>
           <p>
             SGL Trucking Ltd. is commited to the preservation and safe-guarding
-            of the environment. We are committed to developing and operating an
-            accordance to the systems that set the high standards of pollution
-            prevention, environmental conservation, and legal compliance and
-            regulations.
+            of the environment. We are committed to developing and operating in
+            accordance to the regulations set by the goverments high standards
+            of pollution prevention, environmental conservation and preventative
+            care.
           </p>
         </div>
 
@@ -190,9 +190,3 @@ import { Image } from "astro:assets";
     </div>
   </main>
 </Layout>
-
-<style>
-  #hero-title {
-    text-shadow: black 2px 2px 4px;
-  }
-</style>
