--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,25 +26,38 @@ import truckPic from "../assets/truck-bw.avif";
     <div class="bg-stone-100 w-full flex justify-center">
       <div class="w-full py-12 max-w-[800px]">
         <div class="m-auto p-4">
-          <h2 class="text-stone-800 text-4xl pb-6">Meet SGL Trucking Ltd.</h2>
-          <h3 class="text-2xl font-semibold">Office Address:</h3>
-          <div class="py-2">
-            <p>Unit - 202, 11957 80 Ave,</p>
-            <p>Delta, BC V4C 0E2</p>
-          </div>
-          <h2 class="text-stone-800 text-4xl py-6">Contact Information</h2>
-          <div class="py-2 flex justify-evenly flex-col sm:flex-row">
-            <div class="pb-2">
-              <h3 class="text-xl font-semibold">Office Phone:</h3>
-              <p>
-                <a href="tel:+1-604-572-1224"> +1-604-572-1224 </a>
-              </p>
-            </div>
+          <div class="flex flex-col md:flex-row justify-between md:items-start">
             <div>
-              <h3 class="text-xl font-semibold">Email:</h3>
-              <p>
-                <a href="mailto:info@sgltrucking.com">info@sgltrucking.com</a>
-              </p>
+              <h2 class="text-stone-800 text-5xl pb-6">SGL Trucking Ltd.</h2>
+              <h3 class="text-2xl font-semibold">Office Address:</h3>
+              <div class="py-2">
+                <p>SGL Trucking Ltd. Head Office</p>
+                <p>Unit - 202, 11957 80<sup>th</sup>Ave,</p>
+                <p>Delta, BC, V4C 0E2</p>
+              </div>
+            </div>
+
+            <div>
+              <h2 class="text-stone-800 text-3xl py-2 md:pb-2 font-medium">
+                Contact Information
+              </h2>
+
+              <div class="py-2 flex justify-evenly flex-col md:text-left">
+                <div class="pb-2">
+                  <h3 class="text-xl font-medium">Office Phone:</h3>
+                  <p>
+                    <a href="tel:+1-604-572-1224"> +1-604-572-1224 </a>
+                  </p>
+                </div>
+                <div>
+                  <h3 class="text-xl font-medium">Email:</h3>
+                  <p>
+                    <a href="mailto:info@sgltrucking.com"
+                      >info@sgltrucking.com</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
