fixed issue with the hrefs not needing .html

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -26,8 +26,8 @@ const { orientation } = Astro.props;
       text={"About"}
       subTexts={[
         { text: "About Us", path: "/about" },
-        { text: "Our Services", path: "/about.html#services" },
-        { text: "Environmental Policy", path: "/about.html#environment" },
+        { text: "Our Services", path: "/about#services" },
+        { text: "Environmental Policy", path: "/about#environment" },
       ]}
       orientation={orientation}
     />
@@ -37,7 +37,7 @@ const { orientation } = Astro.props;
       text={"Contact"}
       subTexts={[
         { text: "Contact Us", path: "/contact" },
-        { text: "Careers", path: "/contact.html#careers" },
+        { text: "Careers", path: "/contact#careers" },
       ]}
       orientation={orientation}
     />
