--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,12 +40,12 @@ import { Image } from "astro:assets";
         <button
           class="border-2 bg-sky-500 text-base py-2 px-6 text-slate-50 transition-colors hover:bg-blue-500 rounded-3xl p-13 w-1/2 max-w-44 sm:mr-2"
         >
-          <a href="/contact.html#careers">Work with us</a></button
+          <a href="/contact#careers">Work with us</a></button
         >
         <button
           class="border-2 border-slate-200 text-base py-2 px-6 text-slate-50 transition-colors hover:bg-frosted-glass rounded-3xl p-13 mt-6 sm:mt-0 w-1/2 max-w-44 sm:ml-2"
         >
-          <a href="/contact.html#careers">Request a quote</a></button
+          <a href="/contact#careers">Request a quote</a></button
         >
       </div>
     </div>
@@ -293,7 +293,7 @@ import { Image } from "astro:assets";
         <div class="w-full flex justify-center mt-4">
           <button
             class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
-            ><a href="/contact.html#careers">Apply Today</a></button
+            ><a href="/contact#careers">Apply Today</a></button
           >
         </div>
       </div>
