progress on the social media button moved a bunch of svgs into assets folder

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer class="flex flex-col justify-center w-full bg-zinc-800">
-  <fragment class="w-full text-white flex justify-center pb-6 sm:pb-0">
+  <fragment class="w-full text-white flex justify-center pb-20 sm:pb-0">
     <div class="w-full max-w-[1024px] flex flex-col sm:flex-row">
       <div
         class="flex flex-col sm:flex-row w-full text-xl font-light sm:w-3/4 justify-evenly"
@@ -46,7 +46,7 @@
       >
         <p class="text-sm pb-2">MC Number: MC-739429</p>
         <p class="text-sm pb-2">US DOT: 2121810</p>
-        <p>SGL TRUCKING LTD.</p>
+        <p class="pt-6">SGL TRUCKING LTD.</p>
         <p class="text-sm pb-2">© SGL Trucking Ltd.</p>
       </div>
     </div>
