--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -286,6 +286,8 @@ import { Image } from "astro:assets";
         <h3 class="text-3xl text-center mb-4">Are you looking for work?</h3>
         <h4 class="text-2xl text-center mb-4">We are hiring drivers!</h4>
         <p class="text-base">
+          Are you a Long Haul Truck Driver?
+          <br />
           Do you have a Class 1 License with Air brake certificate?
           <br />
           Do you have relevant driving experience in US and Canada?
