--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -81,18 +81,21 @@ const key = import.meta.env.public_maps;
         </div>
       </div>
     </div>
-    <div class="bg-stone-200 w-full flex justify-center">
+    <div class="bg-sky-600 text-slate-50 w-full flex justify-center">
       <div class="py-12 max-w-[800px]">
-        <div class="m-auto p-4 relative">
+        <div class="m-auto p-4 relative flex flex-col">
           <div class="h-4 absolute -top-14" id="careers"></div>
-          <h2 class="text-stone-800 text-4xl pb-6">Join our team!</h2>
+          <h2 class="text-4xl pb-6">Join our team!</h2>
           <p>Are you a Long Haul Truck Driver and looking to join our team?</p>
-
-          <button
-            class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500 mt-8"
-          >
-            <a href="#">Driver Application</a>
-          </button>
+          <p>Do you have a Class 1 License with Air brake certificate?</p>
+          <p>Do you have relevant driving experience in US and Canada?</p>
+          <div>
+            <button
+              class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500 mt-8"
+            >
+              <a href="#">Apply Today!</a>
+            </button>
+          </div>
         </div>
       </div>
     </div>
