--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -173,7 +173,7 @@ import { Image } from "astro:assets";
               <h3 class="text-2xl pt-6 pb-2 text-stone-800">
                 Driver Expectations
               </h3>
-              <p class="py-2">
+              <p class="py-2 text-left">
                 Speeding is easily one of the highest source of poor fuel
                 mileage and therefore unnecessary carbon emissions. This is
                 something that is within the driver's control. We encourage our
