--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import truckFleetPic from "../assets/cropped-sgl-TRUCK-6.webp";
 import coolTruckPic from "../assets/cool-truck.avif";
 
 import { Image } from "astro:assets";
+import ContactForm from "../components/ContactForm.astro";
 ---
 
 <Layout title="SGL Trucking LTD. - Home">
@@ -45,7 +46,7 @@ import { Image } from "astro:assets";
         <button
           class="border-2 border-slate-200 text-base py-2 px-6 text-slate-50 transition-colors hover:bg-frosted-glass rounded-3xl p-13 mt-6 sm:mt-0 w-1/2 max-w-44 sm:ml-2"
         >
-          <a href="/contact#careers">Request a quote</a></button
+          <a href="/contact#contact-form">Request a quote</a></button
         >
       </div>
     </div>
@@ -190,8 +191,9 @@ import { Image } from "astro:assets";
         <div class="w-full flex justify-center mt-4">
           <button
             class="bg-blue-600 text-base py-2 px-6 rounded text-slate-50 transition-colors hover:bg-blue-500"
-            >Request a Quote</button
           >
+            <a href="/contact#contact-form"> Request a Quote </a>
+          </button>
         </div>
       </div>
     </div>
@@ -269,17 +271,23 @@ import { Image } from "astro:assets";
           <button
             class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
           >
-            <a href="/about.html#environment">Read More</a>
+            <a href="/about#environment">Read More</a>
           </button>
         </div>
       </div>
     </div>
-    <div class="h-[70vh] relative">
-      <Image
-        class="object-cover max-h-full h-full w-full fixed -z-10 bottom-0"
-        src={coolTruckPic}
-        alt="truck"
-      />
+    <div class="h-[80vh] relative">
+      <div
+        class="m-auto p-4 h-full max-w-[800px] flex justify-center items-center"
+      >
+        <ContactForm />
+
+        <Image
+          class="object-cover max-h-full h-full w-full fixed -z-10 bottom-0"
+          src={coolTruckPic}
+          alt="truck"
+        />
+      </div>
     </div>
     <div class="w-full bg-sky-600 py-6 text-slate-50">
       <div class="m-auto p-4 max-w-[calc(100% - 2rem)]">
