--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -51,11 +51,17 @@
       </div>
     </div>
   </fragment>
-  <div class="bg-zinc-900 flex justify-between text-zinc-500 px-2 text-sm">
+  <div class="bg-zinc-900 flex justify-between text-zinc-400 px-2 text-sm">
     <p>Made by Sanjeet</p>
     <p>
       Developed with
-      <a class="text-indigo-400" href="https://astro.build/"> Astro </a>
+      <a
+        class="text-indigo-300"
+        href="https://astro.build/"
+        aria-label="Astro Js is a web framework for building content driven websites."
+      >
+        Astro
+      </a>
     </p>
   </div>
 </footer>
