--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import { Image } from "astro:assets";
 
     <!-- button opens MobileMenu component, check file for script -->
     <button
-      class="relative w-7 h-auto p-4 mr-4 mt-2"
+      class="md:hidden relative w-7 h-auto p-4 mr-4 mt-2"
       aria-label="Mobile menu button"
       id="mobile-menu"
     >
@@ -27,7 +27,7 @@ import { Image } from "astro:assets";
       >
       </div>
     </button>
-    <fragment class="hidden md:flex w-full justify-end">
+    <fragment class="hidden ml-0 md:ml-6 md:flex w-full justify-end">
       <Navigation orientation="horizontal" />
     </fragment>
   </header>
