--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,6 +3,7 @@ import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import truckPic from "../assets/truck-bw.avif";
 import ContactForm from "../components/ContactForm.astro";
+import Hiring from "../components/Hiring.astro";
 
 const key = import.meta.env.public_maps;
 ---
@@ -80,7 +81,8 @@ const key = import.meta.env.public_maps;
         <!--  -->
       </div>
     </div>
-    <div class="bg-sky-600 text-slate-50 w-full flex justify-center">
+    <Hiring anchorId="careers" />
+    <!-- <div class="bg-sky-600 text-slate-50 w-full flex justify-center">
       <div class="py-12 max-w-[800px]">
         <div class="m-auto p-4 relative flex flex-col">
           <div class="h-4 absolute -top-14" id="careers"></div>
@@ -92,12 +94,12 @@ const key = import.meta.env.public_maps;
             <button
               class="bg-amber-600 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500 mt-8"
             >
-              <a href="#">Apply Today!</a>
+              Apply Today!
             </button>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </main>
 </Layout>
 
