--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -7,7 +7,8 @@
   </h2>
   <div class="px-8 py-4 sm:p-8">
     <form
-      action=""
+      data-netlify="true"
+      name="Inquiries"
       method="post"
       class="flex flex-col items-center max-w-[80vw]"
     >
