--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,8 +1,10 @@
 <div
-  class="w-full relative bg-frosted-glass-light rounded flex flex-col items-center"
+  class="w-full relative bg-frosted-glass-light rounded flex flex-col items-center border-2 border-slate-200 border-t-0"
 >
   <div class="h-4 absolute -top-28" id="contact-form"></div>
-  <h2 class="text-3xl bg-amber-800 text-stone-100 w-full py-2 rounded-t">
+  <h2
+    class="text-3xl bg-amber-800 text-stone-100 w-full py-2 rounded-t outline outline-2 outline-amber-600"
+  >
     Questions?
   </h2>
   <div class="px-8 py-4 sm:p-8">
@@ -12,10 +14,11 @@
       netlify-honeypot="true"
       name="Inquiries"
       method="post"
+      action="/success"
       class="flex flex-col items-center max-w-[80vw]"
     >
       <div class="flex w-full sm:py-2 flex-col sm:flex-row">
-        <label class="flex flex-col text-left mr-1">
+        <label class="flex flex-col text-left sm:mr-1">
           First Name:
           <input
             aria-label="First Name"
@@ -46,7 +49,7 @@
       </p>
       <div class="flex w-full py-2 flex-col sm:flex-row">
         <div class="flex flex-col sm:w-1/2">
-          <label class="flex flex-col text-left mr-1">
+          <label class="flex flex-col text-left sm:mr-1">
             Email:
             <input
               aria-label="Email"
@@ -56,7 +59,7 @@
               required
             />
           </label>
-          <label class="flex flex-col text-left mr-1">
+          <label class="flex flex-col text-left sm:mr-1">
             Subject:
             <input
               class="rounded border border-slate-400 px-2 focus:outline-yellow-600"
