--- a/src/components/Hiring.astro
+++ b/src/components/Hiring.astro
@@ -30,10 +30,22 @@ const { anchorId } = Astro.props;
     </div>
   </div>
   <div class="w-full flex justify-center mt-4">
-    <a
-      href="/contact#careers"
-      class="bg-amber-700 border border-amber-500 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
-      ><button>Apply Today</button></a
-    >
+    {
+      anchorId === "index" ? (
+        <a
+          href="/contact#careers"
+          class="bg-amber-700 border border-amber-500 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
+        >
+          <button>Apply Today</button>
+        </a>
+      ) : (
+        <a
+          href="/SGL-Trucking-Driver-Form.pdf"
+          class="bg-amber-700 border border-amber-500 text-base py-2 px-6 rounded text-white transition-colors hover:bg-orange-500"
+        >
+          <button>Driver Application Form</button>
+        </a>
+      )
+    }
   </div>
 </div>
